json_tests/tests/ui/missing_value.stderr
error: unexpected end of macro invocation
 --> $DIR/missing_value.rs:5:5
  |
5 |     json!({ "a" : });
  |     ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro outside of the current crate

